--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,19 +8,20 @@
   justify-content: space-between;
   align-items: center;
   height: 10vh;
-  margin: 1rem 0;
+  margin: 1.5rem 0 1rem;
 }
 
 .logo {
   color: var(--pry-color);
-  font-size: 1.25rem;
+  font-size: 1.3rem;
   z-index: 2;
 }
 
 /* Nav styles */
 .nav {
-  position: absolute;
+  position: fixed;
   top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,12 +29,12 @@
   background-color: var(--nav-bg-color);
   width: 100%;
   height: 100vh;
-  transform: translate(100%);
+  transform: translateX(100%);
   transition: all var(--transition-delay) ease-in-out;
 }
 
 .nav.open {
-  transform: translate(-5%);
+  transform: translateX(0%);
 }
 
 .nav.open .nav-link {
@@ -57,7 +58,7 @@
 }
 
 .nav-link {
-  font-size: 1.375rem;
+  font-size: 1.45rem;
   padding: 1rem 0.5rem;
   opacity: 0;
   border: 2px solid transparent;
@@ -74,8 +75,8 @@
   border: 1px solid var(--pry-color);
   border-radius: 0.5rem;
   color: var(--pry-color);
-  font-size: 1.2rem;
-  padding: 1rem 1.2rem;
+  font-size: 1.275rem;
+  padding: 1.1rem 1.3rem;
 }
 
 .nav-link-btn:hover {
@@ -85,7 +86,7 @@
 }
 
 .nav-link:not(:last-child) {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.6rem;
 }
 
 @keyframes navLink {
@@ -110,6 +111,7 @@
   background-color: transparent;
   border: none;
   z-index: 2;
+  overflow: hidden;
 }
 
 .line {
@@ -146,4 +148,42 @@
 .line3.active {
   width: 100%;
   transform: rotate(45deg) translate(-5px, -10px);
+}
+
+/* Style for screen sizes larger than 790px */
+@media screen and (min-width: 49.375rem) {
+  /* Nav styles */
+  .nav {
+    position: static;
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    transform: translate(0);
+    transition: all var(--transition-delay) ease-in-out;
+  }
+
+  .nav-link {
+    font-size: 1.15rem;
+    padding: 0.8rem 0.3rem;
+    opacity: 1;
+  }
+
+  .nav-link-btn {
+    padding: 0.8rem 1rem;
+  }
+
+  .nav-link:not(:last-child) {
+    margin-bottom: 0;
+    margin-right: 2.5rem;
+  }
+
+  /* Hamburger menu styles */
+  .hamburger {
+    display: none;
+  }
 }
